# agent-zero

./: .dockerignore  AGENTS.md  AGENTS.plugins.md  DockerfileLocal  add_secrets.bash  agent-manifests.yaml  agent.py  bedroch_models.json  deepinfra_models.json  models.py  nebius_models.json  requirements.txt  run_ui.py
agent-zero-cisco-guard/: README.md  pyproject.toml
agent-zero-cisco-guard/agent_zero_cisco_guard/: __init__.py  handlers.py
conf/: model_providers.yaml
deploy/proxmox/: .env.template  RUNBOOK.md  docker-compose.yml  generate-env.sh  lxc.conf  migrate-data.sh  model_providers.yaml  unbound-override.conf
deploy/proxmox/cloudflared/: config.yml
deploy/proxmox/nginx/: helpa0.conf
docs/agents/: AGENTS.components.md  AGENTS.modals.md
docs/developer/: plugins.md
helpers/: extract_tools.py  mcp_handler.py  settings.py
plugins/: README.md
plugins/chat_branching/: plugin.yaml
plugins/example_agent/: plugin.json
plugins/memory/: plugin.json  plugin.yaml
plugins/memory/helpers/: memory.py  memory_consolidation.py
plugins/memory/webui/: config.html  settings.html
prompts/: fw.msg_misformat.md
python/api/: plugins.py
python/extensions/message_loop_prompts_before/: _90_organize_history_wait.py
python/helpers/: api.py  extension.py  mcp_handler.py  plugins.py  settings.py  skills_import.py  subagents.py
skills/a0-create-plugin/: SKILL.md
tests/: test_guard_system.py
webui/components/plugins/: plugin-info.html  plugin-settings-store.js  plugin-settings.html
webui/components/plugins/list/: plugin-list.html  (+1 more)
webui/js/: messages.js
(+6 files in other folders)
